--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multisigwallet-react",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -8,19 +8,18 @@
     "@testing-library/user-event": "^12.8.3",
     "@truffle/hdwallet-provider": "^1.7.0",
     "animate.css": "^4.1.1",
+    "next": "^12.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.2",
     "web3": "^1.5.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "eslintConfig": {
     "extends": [
